--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
     <head>
         <title>Git ub first</title>
@@ -6,6 +7,7 @@
     <body>
         <div class="block">
             <h1>PROJECT VTU-CALCULATOR</h1>
+            <p>File will help student</p>
         </div>
     </body>
 </html>
