--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <div class="block">
             <h1>PROJECT VTU-CALCULATOR</h1>
+            <p>It will help Students</p>
         </div>
     </body>
 </html>
