--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <div class="block">
-            <h1>PROJECT VTU-CALCULATOR</h1>
-            <p>It will help Students</p>
+            <h1>PROJECT VTU-CALCULATOR hanged by </h1>
+            <p>It will help Student</p>
         </div>
     </body>
 </html>
